# CAL

./: Resumos CAL.md
Project/: README.md
Project/Entrega_I/: Meat Wagons.docx  Notas.md  README.md
Project/Entrega_II/: AStarandDijkstraComparison.csv  AStarandDijkstraComparison.xlsx  AStarandDijkstraComparisonStrong.xlsx  CMakeLists.txt  DFSandBFSComparison.csv  DFSandBFSComparison.xlsx  Meat Wagons.docx  README.md  main.cpp
Project/Entrega_II/Mapas/Tags/: highways_16x16.txt  tagsPolicia.txt  tagsPrisoes.txt  tagsTribunais.txt  tags_16x16.txt
Project/Entrega_II/src/graph/: Graph.h  Path.cpp  Path.h
Project/Entrega_II/src/gui/: GUI.cpp  GUI.h
Project/Entrega_II/src/menu/: menus.cpp  menus.h
Project/Entrega_II/src/prison/: Prisoner.cpp  Prisoner.h  Vehicle.cpp  Vehicle.h
Project/Entrega_II/src/util/: Parser.cpp  Parser.h  Time.cpp  Time.h  utils.cpp  utils.h
cal_fp01_CLion/: ex3b.csv  ex3b.xlsx
cal_fp01_CLion/Tests/: Change.cpp  Factorial.cpp  Partitioning.cpp  Partitioning.h  Sum.cpp  tests.cpp
cal_fp02_CLion/Tests/: Labirinth.cpp  Labirinth.h  Sudoku.cpp  Sudoku.h  tests.cpp
cal_fp03_CLion/: README.md
cal_fp03_CLion/Tests/: NearestPoints.cpp  tests.cpp
cal_fp04_CLion/: .gitignore
cal_fp04_CLion/Tests/: Graph.h  tests.cpp
cal_fp05_CLion/Tests/: Graph.h  MutablePriorityQueue.h  tests.cpp
cal_fp06_CLion/: FichaJUNG.cpp
cal_fp07_CLion/Tests/: Graph.h
cal_fp08_CLion/Tests/: Graph.h
